service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usa-npr
spec:
  type: LoadBalancer
  selector:
    app: usa-npr
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
