ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usa-npr
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "usdtonpr.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: usa-npr
            port:
              number: 80
